Updated BEL Specification endpoint
